Mon Nov  9 03:41:21 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Message_Queue_Test.cpp:

          Another attempt at fixing this problem on Snow Leopard, hopefully
          less disruptive than the last attempt.
        
Sat Nov  7 08:32:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fix long double for ppc64

Fri Nov  6 11:41:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Reverted the change to check all perl scripts

Fri Nov  6 10:13:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * ace/Tokenizer_T.cpp:

          Allow tokens to have embedded quotes so that
          tao_idl, which generates parameters such as
          -I"directory with spaces", actually works.

          I.E. Only remove surrounding quotes. With
          embedded quotes; the original code simply
          returned the token when the quote character
          was detected, without inserting a token splitting
          null at the quote character (which if it had,
          would then mess up the next quoted token
          processing). This ment that the parameters got
          repeated many times over as they are inserted
          and interpreted again and again.

Fri Nov  6 08:30:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check cdp files for tabs

Thu Nov  5 20:13:47 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/ACE.h:
        * ace/ACE.inl:
        * ace/ACE.cpp:
          Moved nibble2hex from .inl to .cpp file to avoid static
          data in inline function.

Thu Nov  5 13:58:25 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
          Another fix for platforms that define ACE_STRTOLL_EQUIVALENT or
          ACE_STRTOULL_EQUIVALENT.

Thu Nov  5 13:46:34 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_stdlib.h:
          Fix for platforms that lack strtoll or strtoull.
