@@ -213,10 +213,11 @@ Counting_Test_Consumer::svc (void)
   // a calculated number of blocks then stop; the test checker will determine
   // if the number consumed plus the number remaining is correct for the
   // number produced.
-  const u_int mod = UINT_MAX;
-  ACE_OS::srand ((size_t)ACE_Thread::self () % mod);
-  int multiple = ACE_OS::rand () % 10;
-  int delay_ms = ACE_OS::rand () % 10;
+  
+  ACE_RANDR_TYPE seed = ACE_OS::time ();
+
+  int multiple = ACE_OS::rand_r (seed) % 10;
+  int delay_ms = ACE_OS::rand_r (seed) % 10;
   // The delay usually causes the test to time out in the automated
   // regression testing. I just left it here in case it's needed someday.
   delay_ms = 0;
